2006-12-23  Bruno Haible  <bruno@clisp.org>

	* autogen.sh (GNULIB_MODULES_TOOLS_OTHER): Add stdint.

2006-12-21  Bruno Haible  <bruno@clisp.org>

	* autogen.sh: Pass --makefile-name option to gnulib-tool for
	gettext-tools/gnulib-lib.

2006-12-19  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add build-aux/moopp.

2006-12-01  Bruno Haible  <bruno@clisp.org>

	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC): Add fd-ostream,
	styled-ostream, html-styled-ostream, term-styled-ostream.

2006-12-04  Bruno Haible  <bruno@clisp.org>

	* DEPENDENCIES: New file.
	* INSTALL, README: Refer to it.
	* Makefile.am (EXTRA_DIST): Add it.

2006-11-23  Bruno Haible  <bruno@clisp.org>

	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC,
	GNULIB_MODULES_LIBGETTEXTPO): Add ostream, file-ostream.

2006-11-12  Bruno Haible  <bruno@clisp.org>

	* configure.ac (am__tar): Override automake's definition.

2006-11-12  Bruno Haible  <bruno@clisp.org>

	* autogen.sh: Pass --local-symlink option to all gnulib-tool
	invocations.

2006-11-08  Bruno Haible  <bruno@clisp.org>

	* build-aux/install-reloc: Use canonicalize-lgpl.c instead of
	canonicalize.c.

2006-11-05  Bruno Haible  <bruno@clisp.org>

	* autogen.sh (GNULIB_MODULES_RUNTIME_FOR_SRC): Renamed from
	GNULIB_MODULES_FOR_SRC.
	(GNULIB_MODULES_RUNTIME_OTHER): Renamed from GNULIB_MODULES_OTHER.
	(GNULIB_MODULES_TOOLS_FOR_SRC): Renamed from GNULIB_MODULES_FOR_SRC.
	(GNULIB_MODULES_TOOLS_FOR_LIBGREP): Renamed from
	GNULIB_MODULES_FOR_LIBGREP.
	(GNULIB_MODULES_TOOLS_OTHER): Renamed from GNULIB_MODULES_OTHER.
	(GNULIB_MODULES_LIBGETTEXTPO): Renamed from
	GNULIB_MODULES_FOR_LIBGETTEXTPO.
	(GNULIB_MODULES_LIBGETTEXTPO_OTHER): Renamed from GNULIB_MODULES_OTHER.

2006-10-27  Bruno Haible  <bruno@clisp.org>

	Work around automake-1.10 annoyance.
	* build-aux/fixaclocal: New file.
	* autogen.sh: Use it for every aclocal invocation.
	* Makefile.am (ACLOCAL): New macro.

2006-11-27  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16.1 released.
