@@ -1,5 +1,9 @@
 2007-01-26  Bruno Haible  <bruno@clisp.org>
 
+	* msgfilter.c: Include <sys/time.h> unconditionally.
+
+2007-01-26  Bruno Haible  <bruno@clisp.org>
+
 	* msginit.c: Don't include strpbrk.h, use <string.h> instead.
 
 2007-01-26  Bruno Haible  <bruno@clisp.org>
